short biography paragraphs

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>César Hernández - CV</title>
+		<title>César Hernández Hernández - CV</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -68,7 +68,7 @@
 									<header class="major">
 									<h2>Short biography</h2>
 									</header>
-										<p>César Ernesto Hernández Hernández was born in Empalme, Sonora,
+										<p><strong>César Ernesto Hernández Hernández</strong> was born in Empalme, Sonora,
 										Mexico, in 1985. He received a bachelor’s degree in Electronic Engineer
 										from the <em>Hermosillo Institute of Technology</em> (“ITH Instituto
 										Tecnológico de Hermosillo” in Spanish), in Hermosillo, Sonora, Mexico in
@@ -80,8 +80,9 @@
 										2013 and 2017, respectively. In addition, he has also got a Master in
 										Systems and Control Engineering at the <em>Complutense University of
 										Madrid</em> and the <em>National University of Distance Education
-										(UNED)</em> in 2022.<br />
-										From August 2010 to December 2011, he worked as Adjunct Professor at the
+										(UNED)</em> in 2022.</p>
+
+										<p>From August 2010 to December 2011, he worked as Adjunct Professor at the
 										Department of Industrial Engineering at the <em>Sonora Institute of
 										Technology</em> (“ITSON Instituto Tecnológico de Sonora“ in Spanish), in
 										Empalme, Sonora, Mexico. In May 2012, he joined as a Predoctoral Fellow
@@ -92,8 +93,9 @@
 										Bordons Alba and Miguel Angel Ridao Carlini, and at the <em>Federal
 										University of Santa Catarina</em>, Brazil, with Professor Julio Elias
 										Normey Rico. He was working as a researcher at the University of Almeria
-										until October 2017.<br />
-										Once he got the Ph.D. degree, in August 2018 he joined the
+										until October 2017.</p>
+
+										<p>Once he got the Ph.D. degree, in August 2018 he joined the
 										<em>Technological Automotive Centre of Galicia (CTAG)</em> as Data
 										Scientist, where he was involved in projects related to the automotive
 										sector and Industry 4.0 and research projects. From February 2019 to
@@ -111,15 +113,17 @@
 										currently working at <em>ESIGELEC | Écoles d’ingénieur-es
 										généralistes</em> as Research Engineer in applied control, where he is
 										developing mathematical modelling and automatic control strategies (PID,
-										MPC, Fuzzy) applied to aviation systems.<br />
-										He is currently a member of the Spanish Committee of Automatic
-										(CEA).<br />
-										His research interest includes Microgrids/Smartgrids, Mathematical
+										MPC, Fuzzy) applied to aviation systems.</p>
+
+										<p>He is currently a member of the Spanish Committee of Automatic
+										(CEA).</p>
+
+										<p>His research interest includes Microgrids/Smartgrids, Mathematical
 										Modelling, Model Predictive Control, PID Control, Intelligent Control,
 										Control Systems, Renewable Energies, Wind Turbines, Engineering,
 										Optimization, Machine Learning and Deep Learning, Big Data, and Data
-										Mining.<br />
-										</p>
+										Mining.</p>
+										
 								</div>
 							</section>
 
