--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<section id="Biography">
 								<div class="image main" data-position="center">
 									<!-- <img src="images/banner.jpg" alt="" /> -->
-									<img src="images/tinaco.jpg" alt="" />
+									<img src="images/bilbao.jpeg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -183,7 +183,7 @@
 											<a class="image"><img src="images/Logo_ESIGELEC.png" alt="" /></a>
 											<div class="inner">
 												<h3>ESIGELEC</h3>
-												<h4> Research Engineer.</h4>
+												<h4> Research Engineer.</h4> <h5>(Jan. 2023-Current)</h5> 
 												<ul>
 													<li><p>Technologies, tools and methodologies used:</p>
 													<ul>
@@ -199,7 +199,7 @@
 											<a class="image"><img src="images/WeAreClicklers.jfif" alt="" /></a>
 											<div class="inner">
 												<h3>We Are Clickers S.L.</h3>
-												<h4> Senior Data Scientist.</h4>
+												<h4> Senior Data Scientist.</h4> <h5>(March 2022-May 2022)</h5> 
 												<ul>
 													<li><p>Technologies, tools and methodologies used:</p>
 													<ul>
@@ -214,7 +214,7 @@
 											<a class="image"><img src="images/logo-deusto.gif" alt="" /></a>
 											<div class="inner">
 												<h3>University of Deusto</h3>
-												<h4> Research Associate. Researcher in Applied Control Systems, Artificial Intelligence and Machine Learning.</h4>
+												<h4> Research Associate. Researcher in Applied Control Systems, Artificial Intelligence and Machine Learning.</h4> <h5>(Jan. 2021-Dec. 2021)</h5>
 												<ul>
 													<li><p>Technologies, tools and methodologies used:</p>
 													<ul>
@@ -232,7 +232,7 @@
 											<a class="image"><img src="images/bcam.jpg" alt="" /></a>
 											<div class="inner">
 												<h3>Basque Center for Applied Mathematics</h3>
-												<h4>Postdoctoral Fellow in Artificial Intelligence. Data Scientist & Artificial Intelligence and Machine Learning Researcher.</h4>
+												<h4>Postdoctoral Fellow in Artificial Intelligence. Data Scientist & Artificial Intelligence and Machine Learning Researcher.</h4> <h5>(Feb. 2019-Dec. 2020)</h5>
 												<ul>
 													<li><p>Technologies, tools and methodologies used:</p>
 													<ul>
@@ -250,7 +250,7 @@
 											<a class="image"><img src="images/CTAG.png" alt="" /></a>
 											<div class="inner">
 												<h3>Technological Automotive Centre of Galicia (CTAG)</h3>
-												<h4> Data Scientist.</h4>
+												<h4> Data Scientist.</h4> <h5>(Aug. 2018-Feb. 2019)</h5>
 												<ul>
 													<li><p>Technologies, tools and methodologies used:</p>
 													<ul>
@@ -268,7 +268,7 @@
 											<a class="image"><img src="images/logo-ual-sm.png" alt="" /></a>
 											<div class="inner">
 												<h3>University of Almeria</h3>
-												<h4>Teaching Assistant.</h4>
+												<h4>Teaching Assistant.</h4> <h5>(Sept. 2014-Sept. 2016)</h5>
 												<ul>
 													<li><p>Subjects imparted:</p>
 													<ul>
@@ -282,7 +282,7 @@
 											<a class="image"><img src="images/logo-ual-sm.png" alt="" /></a>
 											<div class="inner">
 												<h3>University of Almeria</h3>
-												<h4>Research Assistant.</h4> 
+												<h4>Research Assistant.</h4> <h5>(May 2012-Oct. 2017)</h5>
 												<ul>
 													<li><p>Technologies, tools and methodologies used:</p>
 													<ul>
@@ -307,7 +307,7 @@
 											<a class="image"><img src="images/ITSON.png" alt="" /></a>
 											<div class="inner">
 												<h3>Technological Institute of Sonora (``ITSON Instituto Tecnológico de Sonora'' in Spanish)</h3>
-												<h4>Adjunct Professor.</h4>
+												<h4>Adjunct Professor.</h4> <h5>(Aug. 2010-Dec. 2011)</h5>
 												<ul>
 													<li><p>Subjects imparted:</p>
 													<ul>
