--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 											<a class="image"><img src="images/Logo_ESIGELEC.png" alt="" /></a>
 											<div class="inner">
 												<h3>ESIGELEC</h3>
-												<h4> Research Engineer.</h4> <h5>(Jan. 2023-Current)</h5> 
+												<h4> Research Engineer (Postdoctoral).</h4> <h5>(Jan. 2023-Current)</h5> 
 												<ul>
 													<li><p>Technologies, tools and methodologies used:</p>
 													<ul>
@@ -214,7 +214,7 @@
 											<a class="image"><img src="images/logo-deusto.gif" alt="" /></a>
 											<div class="inner">
 												<h3>University of Deusto</h3>
-												<h4> Research Associate. Researcher in Applied Control Systems, Artificial Intelligence and Machine Learning.</h4> <h5>(Jan. 2021-Dec. 2021)</h5>
+												<h4> Research Associate (Postdoctoral). <em>Researcher in Applied Control Systems, Artificial Intelligence and Machine Learning.</em></h4> <h5>(Jan. 2021-Dec. 2021)</h5>
 												<ul>
 													<li><p>Technologies, tools and methodologies used:</p>
 													<ul>
@@ -232,7 +232,7 @@
 											<a class="image"><img src="images/bcam.jpg" alt="" /></a>
 											<div class="inner">
 												<h3>Basque Center for Applied Mathematics</h3>
-												<h4>Postdoctoral Fellow in Artificial Intelligence. Data Scientist & Artificial Intelligence and Machine Learning Researcher.</h4> <h5>(Feb. 2019-Dec. 2020)</h5>
+												<h4>Postdoctoral Fellow in Artificial Intelligence. <em>Data Scientist & Artificial Intelligence and Machine Learning Researcher.</em></h4> <h5>(Feb. 2019-Dec. 2020)</h5>
 												<ul>
 													<li><p>Technologies, tools and methodologies used:</p>
 													<ul>
