re-sizing icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/academicons.css"/>
 		<link rel="stylesheet" href="assets/css/academicons.min.css"/>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 	</head>
@@ -26,14 +27,14 @@
 
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/cesar-hernandez-hernandez/" class="icon brands fa-linkedin" title="LinkedIn"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/cesar-hernandez-hernandez/" class="icon brands fa-linkedin fa-2x" title="LinkedIn"><span class="label">LinkedIn</span></a></li>
 						<!-- <li><a href="https://orcid.org/0000-0001-8095-9075" class="ai ai-orcid-square ai-2x" title="Orcid"></a></li> -->
-						<li><a href="https://orcid.org/0000-0001-8095-9075" class="ai ai-orcid-square ai-2x" title="Orcid"></a></li>
 						<!-- <li><a href="#" class="icon brands fa-Google"><span class="label">Facebook</span></a></li> -->
 						<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-						<li class="et-social-icon"><a href="https://scholar.google.es/citations?user=WdG8KaMAAAAJ&hl=es" target="_blank" rel="noopener" title="Google Schoolar"><i class="ai ai-google-scholar-square ai-2x"></i></a></li>
-						<li class="et-social-icon"><a href="https://www.researchgate.net/profile/Cesar-Hernandez-Hernandez-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate-square ai-2x"></i></a></li>
-						<li><a href="https://github.com/ceelch" class="icon brands fa-github" title="GitHub"><span class="label">Github</span></a></li>
+						<li class="et-social-icon"><a href="https://scholar.google.es/citations?user=WdG8KaMAAAAJ&hl=es" target="_blank" rel="noopener" title="Google Schoolar"><i class="ai ai-google-scholar ai-3x"></i></a></li>
+						<li class="et-social-icon"><a href="https://www.researchgate.net/profile/Cesar-Hernandez-Hernandez-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate ai-3x"></i></a></li>
+						<li><a href="https://orcid.org/0000-0001-8095-9075" class="ai ai-orcid ai-3x" title="Orcid"></a></li>
+						<li><a href="https://github.com/ceelch" class="icon brands fa-github fa-2x" title="GitHub"><span class="label">Github</span></a></li>
 					</ul>
 				</footer>
 
