--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/cesar-hernandez-hernandez/" class="icon brands fa-linkedin fa-2x" title="LinkedIn"><span class="label">LinkedIn</span></a></li>
 						<!-- <li><a href="https://orcid.org/0000-0001-8095-9075" class="ai ai-orcid-square ai-2x" title="Orcid"></a></li> -->
-						<!-- <li><a href="#" class="icon brands fa-Google"><span class="label">Facebook</span></a></li> -->
 						<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 						<li class="et-social-icon"><a href="https://scholar.google.es/citations?user=WdG8KaMAAAAJ&hl=es" target="_blank" rel="noopener" title="Google Schoolar"><i class="ai ai-google-scholar ai-3x"></i></a></li>
 						<li class="et-social-icon"><a href="https://www.researchgate.net/profile/Cesar-Hernandez-Hernandez-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate ai-3x"></i></a></li>
@@ -55,6 +54,7 @@
 						<li><a href="#AwardsScholarships">Awards and scholarships awarded</a></li>	
 						<li><a href="#SkillsKnowledges">Skills and Knowledge</a></li>	
 						<li><a href="#Languages">Languages</a></li>	
+						<li><a href="#ContactMe">Contact Me</a></li>	
 					</ul>
 				</nav>
 
@@ -157,12 +157,14 @@
 									</ul>
 
 									<!-- <ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
+										<li class="icon solid fa-code">Writing code</li>
 										<li class="icon solid fa-cubes">Stack small boxes</li>
 										<li class="icon solid fa-book">Read books and stuff</li>
 										<li class="icon solid fa-coffee">Drink much coffee</li>
 										<li class="icon solid fa-bolt">Lightning bolt</li>
 										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="icon solid fa-check-square">Artificial Intelligence</li>
+										<li class="icon solid fa-desktop">Artificial Intelligence</li>
 									</ul> -->
 								</div>
 							</section>
@@ -795,24 +797,24 @@
 												<h2 id="skills-and-knowledge">Skills and Knowledge</h2>
 											</header>												
 											<ul>
-											<li><p><span style="color: blue"><strong>Control and
+											<li><p><span><strong style="color: #70c2f8"> Control and
 											Automation.</strong></span> PID Control; Model Predictive Control (MPC);
 											Fuzzy Control; Non Linear Control; Control Systems; PLC Programming;
 											SCADA.</p></li>
-											<li><p><span style="color: blue"><strong>Machine
+											<li><p><span><strong style="color: #70c2f8">Machine
 											Learning.</strong></span> Deep learning; Scikit-learn; TensorFlow;
 											Keras.</p></li>
-											<li><p><span style="color: blue"><strong>Mathematical
+											<li><p><span><strong style="color: #70c2f8">Mathematical
 											Modelling.</strong></span> ARIMAX models; Neural Networks; Bayesian
 											Networks; Transfer Functions; Regression and Classification
 											Trees.</p></li>
-											<li><p><span style="color: blue"><strong>Programming
+											<li><p><span><strong style="color: #70c2f8">Programming
 											Languages.</strong></span> Matlab/Simulink; Python; Julia; R; LabView;
 											SQL.</p></li>
-											<li><p><span style="color: blue"><strong>Software.</strong></span>
+											<li><p><span><strong style="color: #70c2f8">Software.</strong></span>
 											Microsoft Office; Jupyter; Power BI; SPSS; LaTex; Multisim Electronic
 											WorkBench; Festo FluidSim.</p></li>
-											<li><p><span style="color: blue"><strong>Others.</strong></span></p>
+											<li><p><span><strong style="color: #70c2f8;">Others.</strong></span></p>
 											<ul>
 											<li><p>Linux; Teaching; Optimization; FAST; Data Mining; Statistic
 											Analysis; Big Data; pySpark; git; Mathematica.</p></li>
@@ -839,11 +841,19 @@
 											</ul>
 										</div>
 									</section>
-							<!-- <section id="ScientificProduction">
+							
+							<section id="ContactMe">
 								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
+									<header class="major">
+										<h2 id="contact">Contact Me</h2>
+									</header>	
+									<p>You could reach me by writing an email to the following address.</p>
+
+									<ul class="feature-icons">
+										<li class="icon solid fa-envelope"><strong style="color: #70c2f8;">ceelch@gmail.com</strong></li>
+									</ul>
+
+									<!-- <form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -856,9 +866,9 @@
 												</ul>
 											</div>
 										</div>
-									</form>
+									</form> -->
 								</div>
-							</section> -->
+							</section>
 
 						<!-- Five -->
 						<!--
