languages icons added

--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
 										<header class="major">
 											<h2 id="languages">Languages</h2>
 										</header>									
-											<ul>
+											<!-- <ul>
 											<li><p>Spanish. <strong>Native language</strong></p></li>
 											<li><p>English. <strong>B2 Level</strong> in the Common European
 											Framework of Reference for Languages. <em>Not officially
@@ -838,6 +838,15 @@
 											<li><p>Portuguese. <strong>B1 Level</strong> in the Common European
 											Framework of Reference for Languages. <em>Examined at the language
 											school of the University of Almeria in 2016.</em></p></li>
+											</ul> -->
+											<ul class="feature-icons">
+												<li class="icon solid fa-language"> <p><strong>Spanish.</strong> <strong style="color: #70c2f8;">Native language.</strong></p> </li>
+												<li class="icon solid fa-language"> <p><strong>English.</strong> <strong style="color: #70c2f8;">B2 Level</strong> in the Common European Framework of Reference for Languages. <em>Not officially examinated.</em> </p> </li>
+												<li class="icon solid fa-language"> <p><strong>Portuguese.</strong> <strong style="color: #70c2f8;">B1 Level</strong> in the Common European
+													Framework of Reference for Languages. <em>Examined at the language school of the University of Almeria in 2016.</em> </p>
+												</li>
+												<li class="icon solid fa-language"> <p><strong>French.</strong> <strong style="color: #70c2f8;">A1 Level.</strong> <em>Learning.</em> </p>
+												</li>
 											</ul>
 										</div>
 									</section>
