* Readme Updated. * Color in Projects and Languages updated.

--- a/index.html
+++ b/index.html
@@ -968,26 +968,26 @@
 					<ol>
 						<li><strong>COPOGIRT (COmmande Prédictive avec Observateurs pour la
 								Gestion Intelligente des Régimes Transitoires).</strong> <em>ESIGELEC |
-								Écoles d’ingénieur-es généralistes</em>. <strong><em>Dispositif
-									Recherche de la Métropole Rouen Normandie.</em></strong> Rouen,
+								Écoles d’ingénieur-es généralistes</em>. <strong2><em>Dispositif
+									Recherche de la Métropole Rouen Normandie.</em></strong2> Rouen,
 							Normandy, France. (Jan. 2023-Ongoing).</li>
 						<li><strong>Análisis y control de un dispositivo flotante híbrido de
 								energía eólica y marina. / Analysis and control of a hybrid wind and
 								marine energy floating device.</strong> <em>Complutense University of
-								Madrid</em>. <strong><em>Proyecto de I+D Retos Investigación del
+								Madrid</em>. <strong2><em>Proyecto de I+D Retos Investigación del
 									Programa Estatal de Investigación, Desarrollo e Innovación Orientada a
 									los Retos de la Sociedad con referencia
-									RTI2018-094902-B-C21.</em></strong> Madrid, Spain. (Jan. 2019-Sep.
+									RTI2018-094902-B-C21.</em></strong2> Madrid, Spain. (Jan. 2019-Sep.
 							2023).</li>
 						<li><strong>Supervisión y Control de Plataformas Híbridas Marinas
 								(MatrixWW). / Supervision and Control of Floating Hybrid Wave Wind
 								Energy Platforms (MatrixWW).</strong> <em>Complutense University of
-								Madrid</em>. <strong><em>Proyecto de Generación del Conocimiento
-									PID2021-123543OB-C21.</em></strong> Madrid, Spain. (Jan. 2019-Aug.
+								Madrid</em>. <strong2><em>Proyecto de Generación del Conocimiento
+									PID2021-123543OB-C21.</em></strong2> Madrid, Spain. (Jan. 2019-Aug.
 							2025).</li>
 						<li><strong>HortiMED - Towards circular horticulture: closing the
 								loop on Mediterranean greenhouses.</strong> <em>University of Deusto -
-								DeustoTech</em>. <strong><em>H2020 project.</em></strong> Bilbao, Basque
+								DeustoTech</em>. <strong2><em>H2020 project.</em></strong2> Bilbao, Basque
 							Country, Spain. (Jan. 2021-Dec. 2021).</li>
 						<li><strong>Análisis y clasificación de radiografías de Tórax con
 								patología COVID. / Analysis and classification of chest X-rays with
@@ -1491,20 +1491,20 @@
 					</header>
 					<ul class="feature-icons">
 						<li class="icon solid fa-language">
-							<strong>Spanish.</strong> <strong style="color: #70c2f8;">Native language.</strong>
+							<strong>Spanish.</strong> <strong2>Native language.</strong2>
 						</li>
 						<li class="icon solid fa-language">
-							<strong>English.</strong> <strong style="color: #70c2f8;">B2 Level</strong> in the Common
+							<strong>English.</strong> <strong2>B2 Level</strong2> in the Common
 							European Framework of Reference for Languages. <em>Not officially examinated.</em>
 						</li>
 						<li class="icon solid fa-language">
-							<strong>Portuguese.</strong> <strong style="color: #70c2f8;">B1 Level</strong> in the
+							<strong>Portuguese.</strong> <strong2>B1 Level</strong2> in the
 							Common European
 							Framework of Reference for Languages. <em>Examined at the language school of the
 								University of Almeria in 2016.</em>
 						</li>
 						<li class="icon solid fa-language">
-							<strong>French.</strong> <strong style="color: #70c2f8;">A2 Level.</strong>
+							<strong>French.</strong> <strong2>A2 Level.</strong2>
 							<em>Learning.</em>
 
 						</li>
