New Icons Added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="assets/css/academicons.css" />
 	<link rel="stylesheet" href="assets/css/academicons.min.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="is-preload">
@@ -22,27 +23,36 @@
 	<section id="header">
 		<header>
 			<span class="image avatar"><img src="images/CesarHdezHdez.png" alt="" /></span>
-			<h1 id="logo"><a href="#">César Hernández Hernández</a></h1>
+			<!-- <h1 id="logo"><a href="#">César Hernández Hernández</a></h1> -->
+			<h1 id="logo">César Hernández Hernández</h1>
 			Research Engineer at<br />
 			ESIGELEC | Écoles d’ingénieur-es généralistes
 		</header>
 		<footer>
 			<ul class="icons">
 				<li><a href="https://www.linkedin.com/in/cesar-hernandez-hernandez/"
-						class="icon brands fa-linkedin fa-2x" title="LinkedIn"><span class="label">LinkedIn</span></a>
+						class="fa-brands fa-linkedin fa-2x" title="LinkedIn"></a>
 				</li>
-				<!-- <li><a href="https://orcid.org/0000-0001-8095-9075" class="ai ai-orcid-square ai-2x" title="Orcid"></a></li> -->
-				<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-				<li class="et-social-icon"><a href="https://scholar.google.es/citations?user=WdG8KaMAAAAJ&hl=es"
-						target="_blank" rel="noopener" title="Google Schoolar"><i
-							class="ai ai-google-scholar ai-3x"></i></a></li>
+				<li><a href="https://scholar.google.es/citations?user=WdG8KaMAAAAJ&hl=es"
+					class="fa-brands fa-google-scholar fa-2x" title="Google Schoolar"></a>
+				</li>
+				<li><a href="https://www.researchgate.net/profile/Cesar-Hernandez-Hernandez-2"
+					class="fa-brands fa-researchgate fa-2x" title="Research Gate"></a>
+				</li>
+				<li><a href="https://orcid.org/0000-0001-8095-9075" class="fa-brands fa-orcid fa-2x" title="Orcid"></a></li>
+				<li><a href="https://github.com/ceelch" class="fa-brands fa-github fa-2x" title="GitHub"></a></li>
+				<!-- <li><a href="https://www.linkedin.com/in/cesar-hernandez-hernandez/"
+					class="icon brands fa-linkedin fa-2x" title="LinkedIn"><span class="label">LinkedIn</span></a> 
+				</li>
+				<li><a href="https://scholar.google.es/citations?user=WdG8KaMAAAAJ&hl=es"
+					class="fa-brands fa-google-scholar" title="Google Schoolar"><span class="label">Google Schoolar</span></a> 
+				</li>
 				<li class="et-social-icon"><a href="https://www.researchgate.net/profile/Cesar-Hernandez-Hernandez-2"
-						target="_blank" rel="noopener" title="Research Gate"><i
-							class="ai ai-researchgate ai-3x"></i></a>
+					target="_blank" rel="noopener" title="Research Gate"><i	class="ai ai-researchgate ai-3x"></i></a> 
 				</li>
-				<li><a href="https://orcid.org/0000-0001-8095-9075" class="ai ai-orcid ai-3x" title="Orcid"></a></li>
+				<li><a href="https://orcid.org/0000-0001-8095-9075" class="ai ai-orcid ai-3x" title="Orcid"></a></li> 
 				<li><a href="https://github.com/ceelch" class="icon brands fa-github fa-2x" title="GitHub"><span
-							class="label">Github</span></a></li>
+					class="label">Github</span></a></li> -->				
 			</ul>
 		</footer>
 		<nav id="nav">
@@ -50,7 +60,7 @@
 				<li><a href="#Biography" class="active">Short biography</a></li>
 				<li><a href="#Education">Education</a></li>
 				<li><a href="#Education2">Graduates</a></li>
-				<li><a href="#Work">Work expertise</a></li>
+				<li><a href="#Work">Work experience</a></li>
 				<li><a href="#ScientificProduction">Scientific Production</a></li>
 				<li><a href="#ConferenceAttendance">Conference Attendance</a></li>
 				<li><a href="#ResearchStays">Research Stays</a></li>
@@ -87,7 +97,7 @@
 				</div>
 				<div class="container">
 					<header class="major">
-						<h2>Short biography</h2>
+						<h2><i class="fa-solid fa-user-pen"></i> Short biography</h2>
 					</header>
 					<p><strong>César Ernesto Hernández Hernández</strong> was born in Empalme, Sonora,
 						Mexico, in 1985. He received a bachelor’s degree in Electronic Engineer
@@ -152,7 +162,7 @@
 			<section id="Education">
 				<div class="container">
 					<header class="major">
-						<h2>Education</h2>
+						<h2><i class="fa-solid fa-user-graduate"></i> Education</h2>
 					</header>
 					<ul>
 						<li>
@@ -275,7 +285,7 @@
 			<section id="Education2">
 				<div class="container">
 					<header class="major">
-						<h2 id="graduates">Graduates</h2>
+						<h2 id="graduates"><i class="fa-solid fa-certificate"></i> Graduates</h2>
 					</header>
 					<ul>
 						<li>
@@ -300,7 +310,7 @@
 			<section id="Work">
 				<div class="container">
 					<header class="major">
-						<h2>Work Expertise</h2>
+						<h2><i class="fa-solid fa-computer"></i> Work Expertise</h2>
 					</header>
 					<ol>
 						<li>
@@ -782,7 +792,7 @@
 			<section id="ScientificProduction">
 				<div class="container">
 					<header class="major">
-						<h2>Scientific Production</h2>
+						<h2><i class="fa-solid fa-newspaper"></i> Scientific Production</h2>
 					</header>
 					<h3 class="fw-300 centrar-texto">Book Chapters, Journals Publications, Communications in
 						international and national conferences</h3>
@@ -881,7 +891,7 @@
 			<section id="ConferenceAttendance">
 				<div class="container">
 					<header class="major">
-						<h2 id="attendance-at-congresses-conferences-workshops-symposium">Conference Attendance</h2>
+						<h2 id="attendance-at-congresses-conferences-workshops-symposium"><i class="fa-solid fa-book-open-reader"></i>  Conference Attendance</h2>
 					</header>
 					<h3>Attendance at congresses, conferences, workshops, symposium</h3>
 					<ol>
@@ -930,7 +940,7 @@
 			<section id="ResearchStays">
 				<div class="container">
 					<header class="major">
-						<h2 id="research-stays">Research stays</h2>
+						<h2 id="research-stays"><i class="fa-solid fa-book-open-reader"></i> Research stays</h2>
 					</header>
 					<ol>
 						<li>
@@ -963,7 +973,7 @@
 			<section id="Projects">
 				<div class="container">
 					<header class="major">
-						<h2 id="participation-in-projects">Participation in projects</h2>
+						<h2 id="participation-in-projects"><i class="fa-solid fa-diagram-project"></i> Participation in projects</h2>
 					</header>
 					<ol>
 						<li><strong>COPOGIRT (COmmande Prédictive avec Observateurs pour la
@@ -1011,7 +1021,7 @@
 			<section id="Teaching">
 				<div class="container">
 					<header class="major">
-						<h2 id="teaching-imparted">Teaching imparted</h2>
+						<h2 id="teaching-imparted"><i class="fa-solid fa-chalkboard-user"></i> Teaching imparted</h2>
 					</header>
 					<ol>
 						<li>
@@ -1061,7 +1071,7 @@
 			<section id="CoursesInvitation">
 				<div class="container">
 					<header class="major">
-						<h2 id="courses-offered-by-invitation">Courses offered by invitation</h2>
+						<h2 id="courses-offered-by-invitation"><i class="fa-solid fa-chalkboard-user"></i> Courses offered by invitation</h2>
 					</header>
 					<ol>
 						<li>
@@ -1087,7 +1097,7 @@
 			<section id="Mentoring">
 				<div class="container">
 					<header class="major">
-						<h2 id="mentoring-advising">Mentoring &amp; Advising</h2>
+						<h2 id="mentoring-advising"><i class="fa-solid fa-user-tie"></i> Mentoring &amp; Advising</h2>
 					</header>
 					<h3 id="interns">Interns</h3>
 					<ol>
@@ -1118,7 +1128,7 @@
 			<section id="CoursesReceived">
 				<div class="container">
 					<header class="major">
-						<h2 id="courses-and-training-received">Courses and training
+						<h2 id="courses-and-training-received"><i class="fa-solid fa-school"></i> Courses and training
 							received</h2>
 					</header>
 					<h3 id="specialized-technical-or-professional-training">Specialized, technical or professional
@@ -1400,7 +1410,7 @@
 			<section id="AwardsScholarships">
 				<div class="container">
 					<header class="major">
-						<h2 id="awards-and-scholarships-awarded">Awards and scholarships awarded</h2>
+						<h2 id="awards-and-scholarships-awarded"><i class="fa-solid fa-award"></i> Awards and scholarships awarded</h2>
 					</header>
 					<ol>
 						<li>
@@ -1441,7 +1451,7 @@
 			<section id="SkillsKnowledges">
 				<div class="container">
 					<header class="major">
-						<h2 id="skills-and-knowledge">Skills and Knowledge</h2>
+						<h2 id="skills-and-knowledge"><i class="fa-solid fa-brain"></i> Skills and Knowledge</h2>
 					</header>
 					<ul>
 						<li>
@@ -1487,7 +1497,7 @@
 			<section id="Languages">
 				<div class="container">
 					<header class="major">
-						<h2 id="languages">Languages</h2>
+						<h2 id="languages"><i class="fa-solid fa-language"></i> Languages</h2>
 					</header>
 					<ul class="feature-icons">
 						<li class="icon solid fa-language">
@@ -1515,7 +1525,7 @@
 			<section id="ContactMe">
 				<div class="container">
 					<header class="major">
-						<h2 id="contact">Contact Me</h2>
+						<h2 id="contact"><i class="fa-solid fa-envelope"></i> Contact Me</h2>
 					</header>
 					<p> You could reach me by writing an email to the following address.</p>
 					<ul class="feature-icons">
