--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
 				<li><a href="#Education">Education</a></li>
 				<li><a href="#Education2">Graduates</a></li>
 				<li><a href="#Work">Work experience</a></li>
-				<li><a href="#ScientificProduction">Scientific Production</a></li>
-				<li><a href="#ConferenceAttendance">Conference Attendance</a></li>
-				<li><a href="#ResearchStays">Research Stays</a></li>
+				<li><a href="#ScientificProduction">Scientific production</a></li>
+				<li><a href="#ConferenceAttendance">Conference attendance</a></li>
+				<li><a href="#ResearchStays">Research stays</a></li>
 				<li><a href="#Projects">Participation in projects</a></li>
 				<li><a href="#Teaching">Teaching imparted</a></li>
 				<li><a href="#CoursesInvitation">Courses offered by invitation</a></li>
 				<li><a href="#Mentoring">Mentoring &amp; Advising</a></li>
 				<li><a href="#CoursesReceived">Courses and training received</a></li>
 				<li><a href="#AwardsScholarships">Awards and scholarships awarded</a></li>
-				<li><a href="#SkillsKnowledges">Skills and Knowledge</a></li>
+				<li><a href="#SkillsKnowledges">Skills &amp; Knowledge</a></li>
 				<li><a href="#Languages">Languages</a></li>
-				<li><a href="#ContactMe">Contact Me</a></li>
+				<li><a href="#ContactMe">Contact me</a></li>
 			</ul>
 		</nav>
 		<!-- <footer>
@@ -310,7 +310,7 @@
 			<section id="Work">
 				<div class="container">
 					<header class="major">
-						<h2><i class="fa-solid fa-computer"></i> Work Expertise</h2>
+						<h2><i class="fa-solid fa-computer"></i> Work experience</h2>
 					</header>
 					<ol>
 						<li>
@@ -792,7 +792,7 @@
 			<section id="ScientificProduction">
 				<div class="container">
 					<header class="major">
-						<h2><i class="fa-solid fa-newspaper"></i> Scientific Production</h2>
+						<h2><i class="fa-solid fa-newspaper"></i> Scientific production</h2>
 					</header>
 					<h3 class="fw-300 centrar-texto">Book Chapters, Journals Publications, Communications in
 						international and national conferences</h3>
@@ -891,7 +891,7 @@
 			<section id="ConferenceAttendance">
 				<div class="container">
 					<header class="major">
-						<h2 id="attendance-at-congresses-conferences-workshops-symposium"><i class="fa-solid fa-book-open-reader"></i>  Conference Attendance</h2>
+						<h2 id="attendance-at-congresses-conferences-workshops-symposium"><i class="fa-solid fa-book-open-reader"></i> Conference attendance</h2>
 					</header>
 					<h3>Attendance at congresses, conferences, workshops, symposium</h3>
 					<ol>
@@ -1369,7 +1369,7 @@
 						</li>
 					</ol>
 
-					<h3 id="language-courses">Language Courses</h3>
+					<h3 id="language-courses">Language courses</h3>
 					<ol>
 						<li>Nov. 2023–Ongoin. <strong>French course: Level A2.</strong>
 							Alliance Française. <em>60 h.</em></li>
@@ -1451,7 +1451,7 @@
 			<section id="SkillsKnowledges">
 				<div class="container">
 					<header class="major">
-						<h2 id="skills-and-knowledge"><i class="fa-solid fa-brain"></i> Skills and Knowledge</h2>
+						<h2 id="skills-and-knowledge"><i class="fa-solid fa-brain"></i> Skills &amp; Knowledge</h2>
 					</header>
 					<ul>
 						<li>
@@ -1508,15 +1508,14 @@
 							European Framework of Reference for Languages. <em>Not officially examinated.</em>
 						</li>
 						<li class="icon solid fa-language">
+							<strong>French.</strong> <strong2>B1 Level.</strong2>
+							<em>Learning.</em>
+						</li>
+						<li class="icon solid fa-language">
 							<strong>Portuguese.</strong> <strong2>B1 Level</strong2> in the
 							Common European
 							Framework of Reference for Languages. <em>Examined at the language school of the
 								University of Almeria in 2016.</em>
-						</li>
-						<li class="icon solid fa-language">
-							<strong>French.</strong> <strong2>A2 Level.</strong2>
-							<em>Learning.</em>
-
 						</li>
 					</ul>
 				</div>
@@ -1525,7 +1524,7 @@
 			<section id="ContactMe">
 				<div class="container">
 					<header class="major">
-						<h2 id="contact"><i class="fa-solid fa-envelope"></i> Contact Me</h2>
+						<h2 id="contact"><i class="fa-solid fa-envelope"></i> Contact me</h2>
 					</header>
 					<p> You could reach me by writing an email to the following address.</p>
 					<ul class="feature-icons">
