--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		</footer>
 		<nav id="nav">
 			<ul>
-				<li><a href="#Biography" class="active">Short biography</a></li>
+				<li><a href="#Biography" class="active">Short biography and interests</a></li>
 				<li><a href="#Education">Education</a></li>
 				<li><a href="#Education2">Graduates</a></li>
 				<li><a href="#Work">Work experience</a></li>
@@ -97,9 +97,9 @@
 				</div>
 				<div class="container">
 					<header class="major">
-						<h2><i class="fa-solid fa-user-pen"></i> Short biography</h2>
+						<h2><i class="fa-solid fa-user-pen"></i> Short biography and interests</h2>
 					</header>
-					<p><strong>César Ernesto Hernández Hernández</strong> was born in Empalme, Sonora,
+					<!-- <p><strong>César Ernesto Hernández Hernández</strong> was born in Empalme, Sonora,
 						Mexico, in 1985. He received a bachelor’s degree in Electronic Engineer
 						from the <em>Hermosillo Institute of Technology</em> (“ITH Instituto
 						Tecnológico de Hermosillo” in Spanish), in Hermosillo, Sonora, Mexico in
@@ -145,7 +145,20 @@
 							généralistes</em> as Research Engineer in applied control, where he is
 						developing mathematical modelling and automatic control strategies (PID,
 						MPC, Fuzzy) applied to aviation systems.
-					</p>
+					</p> -->
+
+					<p><strong>César Ernesto Hernández Hernández</strong> is <strong3><em>Doctor in Informatics</em></strong3>, specialized in mathematical modeling of dynamic systems, and control systems. He received a bachelor’s degree in <strong3>Electronic Engineer</strong3> from the <em>Hermosillo Institute of Technology</em> (“ITH Instituto
+					Tecnológico de Hermosillo” in Spanish), in Hermosillo, Sonora, Mexico in
+					2008. He has a Master in Sciences (<strong3>Master in Physics and Mathematics</strong3>)
+					from the <em>University of Granada</em> and the <em>University of
+					Castilla-La Mancha</em>, Spain, in Spain 2010. Furthermore, he received
+					a <strong3>Master in Industrial Computing</strong3> and a <strong3>Ph.D. in Informatics</strong3> from the <em>University of Almeria (UAL)</em>, Spain, in
+					2013 and 2017, respectively. In addition, he has also got a <strong3>Master in
+					Systems and Control Engineering</strong3> from the <em>Complutense University of
+					Madrid</em> and the <em>National University of Distance Education
+					(UNED)</em> in 2022.</p>
+
+					<p>Throughout his academic and work career, he has worked on projects in different areas, ranging from energy distribution in microgrids, Industry 4.0 in the automotive sector, machine learning and deep learning to determine the churn rate of companies, image processing with deep learning, modeling and control in the horticulture sector, e-commerce and big data, control of floating offshore wind turbines and, modeling and control of wind tunnels. As can be seen, although some of the projects are totally different from each other, in all of them it has been necessary to make use of mathematical modeling of dynamic systems, machine learning and deep learning, and development of system control strategies (PID control, Fuzzy control and Model Predictive Control).</p>
 
 					<p>He is currently a member of the Spanish Committee of Automatic
 						(CEA).</p>
