Language courses updated. Learning B1 french.

--- a/index.html
+++ b/index.html
@@ -1384,7 +1384,9 @@
 
 					<h3 id="language-courses">Language courses</h3>
 					<ol>
-						<li>Nov. 2023–Ongoin. <strong>French course: Level A2.</strong>
+						<li>March 2024–Ongoin. <strong>French course: Level B1.</strong>
+							Alliance Française. <em>60 h.</em></li>
+						<li>Nov. 2023–Feb. 2024. <strong>French course: Level A2.</strong>
 							Alliance Française. <em>60 h.</em></li>
 						<li>May 2023–Oct. 2023. <strong>French course: Level A1.</strong>
 							Alliance Française. <em>60 h.</em></li>
