--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 											Programming LabView.
 										</li>
 										<li>
-											Visualization, analysis, and data cleaning using tools such as
+											Visualisation, analysis, and data cleaning using tools such as
 											Matlab, Python, and R.
 										</li>
 										<li>
@@ -1403,7 +1403,7 @@
 						<li>Sep. 2020. <strong>English B2 Intensive Course (Online).</strong>
 							UAL. <em>30 h.</em></li>
 						<li>June 2020. <strong>How to Write and Publish a Scientific Paper
-								(Project-Centered Course).</strong> Ecole Polytechnique and Coursera.
+								(Project-Centred Course).</strong> Ecole Polytechnique and Coursera.
 							<em>10 h.</em>
 						</li>
 						<li>Oct. 2019 - June 2020. <strong>Preparation of English Language at
@@ -1435,7 +1435,7 @@
 							(Jan. 2019).
 						</li>
 						<li>
-							<strong>Mention of Excellence.</strong> Award of excellence for
+							<strong>Mention of Excellence.</strong> Award of Excellence for
 							the work presented in Session I: Energy. VIII Iberian Congress of
 							Agroengineering. (June 2015).
 						</li>
@@ -1456,7 +1456,7 @@
 							Hermosillo, Sonora, Mexico. (2007-2009).
 						</li>
 						<li>
-							<strong>Scholarship Program of the National Scholarship Program
+							<strong>Scholarship Programme of the National Scholarship Program
 								(PRONABES).</strong> Hermosillo, Sonora, Mexico. (2007-2009).
 						</li>
 					</ol>
