--- a/index.html
+++ b/index.html
@@ -1674,7 +1674,8 @@
 					<script>
 						const lastUpdated = document.getElementById('lastUpdated');
 						const date = new Date();
-						lastUpdated.textContent = `Last updated: ${date.toLocaleDateString()}`;
+						lastUpdated.textContent = `Last updated: August 11, 2024`;
+						// lastUpdated.textContent = `Last updated: ${date.toLocaleDateString()}`;
 						// lastUpdated.textContent = `Last updated: ${date.toLocaleString()}`;
 						// lastUpdated.textContent = `Last updated: ${date.toLocaleTimeString()}`;
 					</script>
